--- a/gb/19/8/12/n11447585.md
+++ b/gb/19/8/12/n11447585.md
@@ -1,16 +1,16 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/carc2844/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/carc2844/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/carc2844/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/carc2844/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/carc2844/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/carc2844/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/carc2844/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/carc2844/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/carc2844/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/carc2844/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/carc2844/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/carc2844/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/carc2844/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/carc2844/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/carc2844/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/carc2844/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/carc2844/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/carc2844/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/carc2844/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/carc2844/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/carc2844/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/carc2844/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/carc2844/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/carc2844/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/carc2844/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/carc2844/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/carc2844/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/carc2844/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/carc2844/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/carc2844/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/carc2844/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/carc2844/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/carc2844/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/carc2844/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/carc2844/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/carc2844/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/carc2844/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/carc2844/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/carc2844/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/carc2844/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/carc2844/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/carc2844/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/carc2844/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/carc2844/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/carc2844/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
-<tr><td VALIGN=TOP width="626"><h2 align=center>竹市启动五星学习之旅  让城市美好愿景再提升</h2>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/hxcaik307/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<tr><td VALIGN=TOP width="626"><h2 align=center>竹市启动五星学习之旅 让城市美好愿景再提升</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2019/08/1eac756cce50031052f8ceea4a7dfda5-600x400.jpg" />
-<h6>2019五星市长颁奖典礼 (竹市府提供)
+<h6>2019五星市长颁奖典礼。（竹市府提供）
 </h6>
 <hr>
-<p>【大纪元2019年08月12日讯】（大纪元记者林倩玉综合报导）日前远见杂志公布2019年“<ahref="https://github.com/carc2844/djy/blob/master/gb/tag/%E5%8E%BF%E5%B8%82%E9%95%BF%E6%96%BD%E6%94%BF%E6%BB%A1%E6%84%8F%E5%BA%A6.md#1">县市长施政满意度</a>调查”，<ahref="https://github.com/carc2844/djy/blob/master/gb/tag/%E6%96%B0%E7%AB%B9%E5%B8%82%E9%95%BF.md#1">新竹市长</a><ahref="https://github.com/carc2844/djy/blob/master/gb/tag/%E6%9E%97%E6%99%BA%E5%9D%9A.md#1">林智坚</a>获市民支持得五星市长，在<ahref="https://github.com/carc2844/djy/blob/master/gb/tag/%E9%A2%81%E5%A5%96%E5%85%B8%E7%A4%BC.md#1">颁奖典礼</a>上宣布将进行五星学习之旅施政观摩，获五星首长们回响。自8月份起，市府团队正式“揪团”，第一站将前往连江县，未来也将与花莲县、桃园市、屏东县、南投县等五星县市交流，不仅能了解地方首长们执政经验，也能传达新竹经验的幸福方程式。</p>
+<p>【大纪元2019年08月12日讯】（大纪元记者林倩玉综合报导）日前远见杂志公布2019年“<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E5%8E%BF%E5%B8%82%E9%95%BF%E6%96%BD%E6%94%BF%E6%BB%A1%E6%84%8F%E5%BA%A6.md#1">县市长施政满意度</a>调查”，<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E6%96%B0%E7%AB%B9%E5%B8%82%E9%95%BF.md#1">新竹市长</a><ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E6%9E%97%E6%99%BA%E5%9D%9A.md#1">林智坚</a>获市民支持得五星市长，在<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E9%A2%81%E5%A5%96%E5%85%B8%E7%A4%BC.md#1">颁奖典礼</a>上宣布将进行五星学习之旅施政观摩，获五星首长们回响。自8月份起，市府团队正式“揪团”，第一站将前往连江县，未来也将与花莲县、桃园市、屏东县、南投县等五星县市交流，不仅能了解地方首长们执政经验，也能传达新竹经验的幸福方程式。</p>
 <p>行政处长白舒桦表示，五星学习之旅首站选定离岛连江县。连江县有知名的战地文化，竹市也有空军基地与眷村文化；连江有丰富的生态资源，香山则有水鸟保护区与潮间带生态。同时也规划前往花莲来场渔业交流，因竹市与花莲皆有定置渔场，且花莲已成功结合渔业与观光产业，让旅客了解定置渔场这种友善的捕鱼方式，还能亲身体验渔获烹饪DIY，盼吸引民众看见台湾丰富美丽的海洋文化。</p>
-<figure id="11447588" style="width: 500px" class="wp-caption aligncenter"><img src="https://i.epochtimes.com/assets/uploads/2019/08/e1d27c162c139fe7e698be49a3d81ae1-450x300.jpg" alt="今年初市长林智坚率领市府一级主管至台东县参访" width="500" /><figcaption class="wp-caption-text">今年初市长<ahref="https://github.com/carc2844/djy/blob/master/gb/tag/%E6%9E%97%E6%99%BA%E5%9D%9A.md#1">林智坚</a>率领市府一级主管至台东县参访（竹市府提供）</figcaption></figure>
+<figure id="11447588" aria-describedby="caption-11447588" style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2019/08/e1d27c162c139fe7e698be49a3d81ae1-450x300.jpg" target="_blank" rel="noreferrer noopener"> <img src="https://i.epochtimes.com/assets/uploads/2019/08/e1d27c162c139fe7e698be49a3d81ae1-450x300.jpg" alt="今年初市长林智坚率领市府一级主管至台东县参访" width="500" /></a><figcaption id="caption-11447588" class="wp-caption-text">今年初市长<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E6%9E%97%E6%99%BA%E5%9D%9A.md#1">林智坚</a>率领市府一级主管至台东县参访。（竹市府提供）</figcaption></figure>
 <p>行政处表示，竹市邀请各五星县市团队进行双五星交流会议，分享各县市施政优点与执政经验，并到第一线实地观摩，首站将于8月14、15日前往连江县，向四度荣获五星评价的刘增应县长请益，交流施政满意度夺冠关键，同时也分享竹市推动美学改造与幸福城市的各项成果。</p>
-<p><ahref="https://i.epochtimes.com/assets/uploads/2019/08/1ae1988299f5eb2993a02473161e1d44.jpg"><img class="size-large wp-image-11447589" src="https://i.epochtimes.com/assets/uploads/2019/08/1ae1988299f5eb2993a02473161e1d44-600x399.jpg" alt="" width="600" b="399" /></a></p>
+<figure id="attachment_11447589" aria-describedby="caption-attachment-11447589" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2019/08/1ae1988299f5eb2993a02473161e1d44.jpg"><img class="wp-image-11447589 size-large" src="https://i.epochtimes.com/assets/uploads/2019/08/1ae1988299f5eb2993a02473161e1d44-600x399.jpg" alt="" width="600" b="399" /></a><figcaption id="caption-attachment-11447589" class="wp-caption-text">台东图书馆前合影。（竹市府提供）</figcaption></figure>
 <p>未来市府还有许多城市愿景持续进行，像是竹科Ｘ园区、大新竹轻轨、大车站计划、新建总图书馆、儿童医院等，希望藉由经验分享及互相学习，让新竹市美好愿景再提升。</p>
 <p>责任编辑：林勤芝</p>
 
@@ -18,42 +18,47 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/carc2844/djy/blob/master/gb/19/5/30/n11289143.md#1">郑文灿六都唯一5星级首长  接地气、有愿景</a></li>
-<li><a href="https://github.com/carc2844/djy/blob/master/gb/19/5/30/n11289499.md#1">远见民调获5星 林明溱施政满意度全国第4</a></li>
-<li><a href="https://github.com/carc2844/djy/blob/master/gb/19/5/30/n11289637.md#1">远见杂志县市长施政调查 黄敏惠评获4.5星</a></li>
-<li><a href="https://github.com/carc2844/djy/blob/master/gb/19/5/31/n11291455.md#1">桃园教育满意度全国第三  教师会：经费不能断</a></li>
-<li><a href="https://github.com/carc2844/djy/blob/master/gb/19/6/13/n11319828.md#1">获5星首长肯定  潘孟安：续拼屏东进步中</a></li>
-<li><a href="https://github.com/carc2844/djy/blob/master/gb/19/6/27/n11349487.md#1">2019年《远见》县市总体竞争力评比 嘉市亮眼</a></li>
-<li><a href="https://github.com/carc2844/djy/blob/master/gb/20/5/16/n12114076.md#1">为防疫能力打分数 竹县议员呼吁需再加强</a></li>
-<li><a href="https://github.com/carc2844/djy/blob/master/gb/20/5/16/n12114071.md#1">大新竹生活圈？ 议员质询轻轨及AI智慧园区</a></li>
-<li><a href="https://github.com/carc2844/djy/blob/master/gb/20/5/15/n12112530.md#1">亚太美国学校“艺空间”开幕  展出学生艺想世界</a></li>
-<li><a href="https://github.com/carc2844/djy/blob/master/gb/20/5/15/n12111312.md#1">疫情趋缓 竹市府5月18日起停止户外洽公</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/5/30/n11289143.md#1">郑文灿六都唯一5星级首长 接地气、有愿景</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/5/30/n11289499.md#1">远见民调获5星 林明溱施政满意度全国第4</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/5/30/n11289637.md#1">远见杂志县市长施政调查 黄敏惠评获4.5星</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/5/31/n11291455.md#1">桃园教育满意度全国第三 教师会：经费不能断</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/6/13/n11319828.md#1">获5星首长肯定 潘孟安：续拼屏东进步中</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/6/27/n11349487.md#1">2019年《远见》县市总体竞争力评比 嘉市亮眼</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13615941.md#1">徐耀昌走访铜锣窑青年创业基地 体验DIY</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13613400.md#1">1966 长照服务伴你左右</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13613360.md#1">头屋乡举办植树节活动 4千株树苗免费索取</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13611231.md#1">纪念二二八 林智坚：民主火炬接棒守护台湾</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/6/1/n11293536.md#1" target="_blank">【征文】元正戊：弦高退秦军救郑国后为何拒受重赏</a></li><li><a href="https://github.com/carc2844/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank">解体中共复兴中华</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/7/28/n11415000.md#1" target="_blank">一位中国老太在欧洲不平凡的20年（上）</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank">马克思的成魔之路</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/4/n11234376.md#1" target="_blank">【征文】文宇：科举千年兴衰录（二）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/14/10/23/n4278972.md#1" target="_blank">阚神州：中共行株连之罪恶 肇残民之祸</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/carc2844/djy/blob/master/gb/20/5/14/n12108396.md#1">中研院薪水比卸任副元首礼遇金高？陈建仁回应</a></li>
-<li><a href="https://github.com/carc2844/djy/blob/master/gb/20/5/15/n12110809.md#1">【十字路口】美中要全面脱钩 中国五大经济警讯</a></li>
-<li><a href="https://github.com/carc2844/djy/blob/master/gb/20/5/14/n12109049.md#1">网曝习近平讲话：中共内部有“反习集团”</a></li>
-<li><a href="https://github.com/carc2844/djy/blob/master/gb/20/5/14/n12109208.md#1">加速脱钩 川普：可切断整个中美关系</a></li>
-<li><a href="https://github.com/carc2844/djy/blob/master/gb/20/5/13/n12106297.md#1">【内幕】北京红二代谈特权和疫情冲击</a></li>
-<li><a href="https://github.com/carc2844/djy/blob/master/gb/20/5/13/n12106258.md#1">有意入籍台湾遭黄安攻击 黄秋生一句话爆呛</a></li>
-<li><a href="https://github.com/carc2844/djy/blob/master/gb/20/5/15/n12110814.md#1">IU半个月三度捐款助人 生日前夕短发受关注</a></li>
-<li><a href="https://github.com/carc2844/djy/blob/master/gb/20/5/13/n12106548.md#1">疫情下戴口罩产子 日女星用力过度致尾椎骨折</a></li>
-<li><a href="https://github.com/carc2844/djy/blob/master/gb/20/5/13/n12105629.md#1">《花木兰》角色海选影片曝光 歌手窦靖童出镜</a></li>
-<li><a href="https://github.com/carc2844/djy/blob/master/gb/20/5/15/n12111068.md#1">曝江蕙封麦后近况 陈子鸿笑喊：约吃饭都不来</a></li>
-<li><a href="https://github.com/carc2844/djy/blob/master/gb/20/5/10/n12097175.md#1">天才预言家珍妮  2020年大决战预言</a></li>
-<li><a href="https://github.com/carc2844/djy/blob/master/gb/20/3/14/n11939927.md#1">善能量超时空 几年后扭转“要命”时刻</a></li>
-<li><a href="https://github.com/carc2844/djy/blob/master/gb/20/5/15/n12110895.md#1">女子濒死见上帝和耶稣 恳求还阳终获重生</a></li>
-<li><a href="https://github.com/carc2844/djy/blob/master/gb/20/4/25/n12061244.md#1">贾宝玉和薛宝钗的金玉之缘</a></li>
-<li><a href="https://github.com/carc2844/djy/blob/master/gb/20/5/11/n12099276.md#1">台北五分埔商圈的故事</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/14/n13576716.md#1">【百年真相】亲历者揭秘“1952细菌战”真相</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/25/n13605590.md#1">【未解之谜】地球磁极倒转进行中??</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610168.md#1">【神韵作品】唐瑞讲故事｜朗读｜小熊维尼第一章</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/22/n13597113.md#1">【百年真相】现代文字狱 胡风如何成了反革命？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/17/n13582752.md#1">【奇事】两位卜算大师看出对方死期 但两人皆无法避过</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614217.md#1">【财商天下】被踢出SWIFT 俄金融迅速“休克”</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614863.md#1">《梁祝》小提琴协奏曲</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13615200.md#1">吴明德：中共暗撑俄侵乌 恐成国际大输家</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607661.md#1">【更新2.27】乌总统：接下来24小时至关重要</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610320.md#1">乌克兰用无人机摧毁俄导弹系统 视频曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609576.md#1">俄银行被切断SWIFT系统 中共角色更尴尬</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609572.md#1">纳豆或暂退萤光幕一年 经纪人曝他最新病况</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609465.md#1">看海狮资料一目十行过目不忘 杨幂展超强记忆力</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612216.md#1">港星吴孟达过世一周年 长眠大马原因曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614888.md#1">赴韩拍戏皮肤长满红斑 范冰冰素颜照吓坏网友</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614510.md#1">香港TVB艺人祝文君罹癌离世 终年55岁</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612112.md#1">更强Omicron变种出现？致病性、传播力一次看</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/23/n13599631.md#1">疫苗、口罩难结束疫情 这一件事或成关键</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607140.md#1">睡眠十大好处 提高脑力、抗衰老都在内</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13608014.md#1">多吃橙色食物 不只护眼 还有这些强大好处</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13607888.md#1">调查：十对夫妻中三对存在“财务不忠”</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/carc2844/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/carc2844/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/19/8/12/n11447585.htm">竹市启动五星学习之旅  让城市美好愿景再提升</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/19/8/12/n11447585.htm">竹市启动五星学习之旅 让城市美好愿景再提升</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/carc2844/djy/blob/master/gb/19/8/12/n11447585.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/carc2844/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/carc2844/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/carc2844/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/carc2844/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/carc2844/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/carc2844/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/carc2844/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/carc2844/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/carc2844/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/carc2844/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/carc2844/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/carc2844/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/carc2844/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/carc2844/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/carc2844/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/carc2844/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/carc2844/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/carc2844/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/carc2844/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/carc2844/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/carc2844/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/carc2844/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/carc2844/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/carc2844/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/carc2844/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/carc2844/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/carc2844/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/carc2844/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/carc2844/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/carc2844/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/carc2844/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/carc2844/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/carc2844/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/carc2844/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/carc2844/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/carc2844/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/carc2844/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/carc2844/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/carc2844/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/carc2844/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/carc2844/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/carc2844/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/carc2844/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/carc2844/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/carc2844/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/carc2844/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/carc2844/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/carc2844/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/hxcaik307/djy/blob/master/gb/19/8/12/n11447585.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
